# silica

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
bench/: __init__.py  baseline.py  compile_ablation.py  cross_engine.py  decode.py  eval_ppl.py  roofline.py  roofline_compare.py  scaling.py
bench/data/: corpus.txt  corpus_large.txt
docs/: AUDIT.md  CODE_AUDIT.md  READING_GUIDE.md  REPORT.md  results-generality.md  results-m1.md  results-m2-baseline.md  results-m4-cross-engine.md  results-moe.md
silica/: __init__.py  attention.py  cache.py  compiled.py  config.py  detokenize.py  generate.py  model.py  sample.py  weights.py
silica/kernels/: README.md  __init__.py
silica/models/: __init__.py  common.py  llama.py  olmoe.py  qwen3.py  qwen3_moe.py
tests/: conftest.py  test_bench.py  test_cache.py  test_compiled.py  test_config.py  test_detokenize.py  test_eval_ppl.py  test_llama.py  test_olmoe.py  test_parity.py  test_prefix.py  test_prequant.py  test_quant.py  test_roofline.py  test_sample.py
